<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.snaillemon.rookiestore.widget.SlToolbar
        android:id="@+id/cart_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/cart_title"
        app:rightButtonText="@string/edit"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/cart_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cart_toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#88000000"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        >
        <CheckBox
            android:id="@+id/cart_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:checked="true"
            android:text="@string/allcheck"
            android:layout_centerVertical="true"
            style="@style/customCheckbox"/>
        <TextView
            android:id="@+id/cart_total_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cart_checkbox"
            android:text="@string/total"
            android:textSize="20sp"
            android:layout_marginLeft="40dp"
            android:layout_centerVertical="true"
            />
        <Button
            android:id="@+id/cart_calculate_btn"
            android:layout_width="wrap_content"
            android:text="@string/calculate"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            style="@style/bigRedButton"/>
        <Button
            android:id="@+id/cart_del_btn"
            android:layout_width="wrap_content"
            android:text="@string/delete"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            style="@style/bigRedButton"/>
    </RelativeLayout>
</RelativeLayout>